<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.emby</groupId>
    <artifactId>EmbyPinyin</artifactId>
    <version>2.0.13</version>

    <organization>
        <name>wushuo894</name>
    </organization>

    <inceptionYear>2025</inceptionYear>
    <description>Emby 支持拼音首字母排序</description>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.21</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.36</version>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>5.8.41</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.biezhi</groupId>
            <artifactId>TinyPinyin</artifactId>
            <version>2.0.3.RELEASE</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>emby-pinyin</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.emby.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>2.5.1</version>
                <executions>
                    <execution>
                        <id>l4j</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>console</headerType>
                            <outfile>target/emby-pinyin-launcher.exe</outfile>
                            <jar>target/emby-pinyin-jar-with-dependencies.jar</jar>
                            <errTitle>Java environment is required!</errTitle>
                            <chdir>.</chdir>
                            <priority>normal</priority>
                            <downloadUrl>https://adoptium.net/zh-CN/</downloadUrl>
                            <supportUrl>https://whichjdk.com/</supportUrl>
                            <stayAlive>false</stayAlive>
                            <restartOnCrash>false</restartOnCrash>
                            <jre>
                                <path>jre/bin;%JAVA_HOME%/bin;%PATH%</path>
                                <minVersion>17</minVersion>
                                <opts>
                                    <opt>-Xms60m -Xmx512m -Xss256k</opt>
                                    <opt>--enable-native-access=ALL-UNNAMED</opt>
                                    <opt>-XX:+UseCompactObjectHeaders</opt>
                                    <opt>-XX:+IgnoreUnrecognizedVMOptions</opt>
                                    <opt>--add-opens=java.base/java.net=ALL-UNNAMED</opt>
                                    <opt>--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <copyright>Copyright (C) 2024-2025</copyright>
                                <productName>${project.artifactId}</productName>
                                <internalName>${project.artifactId}</internalName>
                                <originalFilename>emby-pinyin-launcher.exe</originalFilename>
                                <language>SIMPLIFIED_CHINESE</language>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
